--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,4 +16,9 @@
     <p>it is TRUE!</p>
     {% endif %}
 
+    {% for post in posts %}
+    <p><b>{{ post.title }}</b></p>
+    <p>{{ post.text | linebreaksbr }}</p>
+    
+    {% endfor %}
 </html>
