--- a/maze/templates/maze/make_character.html
+++ b/maze/templates/maze/make_character.html
@@ -1,60 +1,97 @@
 {% load static %}
 <html>
     <head>
-        <lik rel = "stylesheet" href = "{% static 'css/blog.css' %}"></lik>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <lik rel = "stylesheet" href = "{% static 'css/maze.css' %}"></lik>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-        <script>
-            let step_title = [
-                "1. Roll stats (능력치를 굴려요)",
-                "2. 최대 건강",
-                "3. 시작 특성",
-                "4. 여섯가지 물품 선택",
-                
-            ]
-                
-            
-                /*
-                $(document).ready(function(){
-                    $("button").click(function(){
-                        $("#div1").load("demo_test.txt");
-                    });
-                });
-                */
-                //$.ajax({ url:'time/', data : { 'search_key':search_key}, success:function(data){ $('#data_table').html(data) } })
-                /*
-                $(function() {
-                    
-                    $('#AjaxStart').click(function() {
 
-                        $.ajax({ 
-                            url:'.', 
-                            dataType: "json",
-                            //type: 'POST',
-                            //data: {'today': 1},
-                            success: function(data){ $('#div1').html(data.time) }
-                             
-                        })
-                    })
-                })
-*/
-        </script>
     </head>
     <body>
         <div id = 'game_name'>
-            <h1><B>Maze</B></h1>
+            <h1 class = 'a'><B>Maze</B></h1>
         </div>
         <div id = 'page_name'>
             <h2><b>make character</b></h2>
         </div>
-        <div id = 'step'>
-            1 / 12
+        <div id = "steps">
+            <p>[[ descript( {{ step }} ) ]]</p>
+            <table width = 300px height = 100px> 
+                <tr>
+                    <th>근력</th>
+                    <th>민첩성</th>
+                    <th>정신력</th>
+                </tr>
+                <tr>
+                    <td>[[ ablity.strength ]]</td>
+                    <td>[[ ablity.dexterity ]]</td>
+                    <td>[[ ablity.intelligence ]]</td>
+                </tr>
+                <tr>
+                    <td><button v-on:click="ablity.strength = roll(1,6)">굴리기</button></td>
+                    <td><button v-on:click="ablity.dexterity = roll(1,6)">굴리기</button></td>
+                    <td><button v-on:click="ablity.intelligence = roll(1,6)">굴리기</button></td>
+                </tr>
+            </table>
+
+           <!-- <p>[[ descript( {{ step }} ) ]]</p>
+            <p>최대 건강은 4로 시작합니다.</p>
+                //-->
+            
         </div>
-        <div id = 'step_title'>
-            step_title
-        </div>
-        <div id = 'step_contents'>
-            step_contents
-        </div>
+        
+       <!-- <script src = "aaa.js"></script> //-->
+      <!-- <script src="{% static 'js/make_character.js' %}"></script> -->
+      <script>
+            new Vue({
+                delimiters: ['[[', ']]'],
+                el: '#steps',           
+                data: {               
+                    titles:        
+                    [
+                        "1. Roll stats (능력치를 굴려요)",
+                        "2. 최대 건강",
+                        "3. 시작 특성",
+                        "4. 여섯가지 물품 선택",
+                        "5. 전투장비를 선택하세요.",
+                        "6. 겉모습",
+                        "7. 신체특징",
+                        "8. 뒷배경",
+                        "9. 옷차림",
+                        "10. 성격",
+                        "11. 말버릇",
+                        "12. 이름, 레벨, 경험치"
+                    ],
+                    ablity: {
+                        strength: '-',
+                        dexterity: '-',
+                        intelligence: '-'
+                    }
+
+                },
+                methods: {
+                    descript: function (step) {
+                        return this.titles[parseInt(step)];
+                    },
+
+                    roll: function (n_dice, dice_n) {
+                        let result = 0
+                        for (i = 0; i <= n_dice; i++) {
+                            result = Math.ceil(Math.random() * 1000) % dice_n + 1
+                        }
+                        return result
+                    }
+                    
+                    /*,
+    
+                    tt: function (titles) {
+                        //this.step_title = this.title[step] 
+                        return titles.filter(function(t) {
+                            return t.charAt(0) % 3 === 0
+                        })
+                    }*/
+                }
+            })
+            </script>
     </body>
 </html>
