--- a/maze/templates/maze/make_character.html
+++ b/maze/templates/maze/make_character.html
@@ -71,7 +71,7 @@
                     </tr>
             
             </table>
-            <a href="{% url 'hello_world' %}" class="button">이 캐릭터로 결정</a>
+            <a href="{% url 'game' %}" class="button">이 캐릭터로 결정</a>
             <a href="{% url 'make_char' %}" class="button">캐릭터 다시 만들기</a>
             
         </div>
